# enigma

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  enigma.cc  enigma.h  main.cc  run.sh
.github/workflows/: cmake.yml
src/: enigma.cc  enigma.h  enigma3.cc  enigma3.h  main.cc
test/: magic_test.h  maptest.cc
